fixed safari mouseenter bug + overflow-x bug

--- a/css/main.css
+++ b/css/main.css
@@ -89,6 +89,7 @@ html {
     overflow-x: hidden;
 }
 body {
+    position:relative;
     height: 100%;
     -webkit-font-smoothing: antialiased;
     overflow-x: hidden;
